--- a/404.html
+++ b/404.html
@@ -27,14 +27,14 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti">
+  <meta name="author" content="Alejandro Astudillo">
 
   
   
   
     
   
-  <meta name="description" content="Professor of Artificial Intelligence">
+  <meta name="description" content="Ph.D. Researcher">
 
   
   <link rel="alternate" hreflang="en-us" href="https://alejandroastudillo.github.io/404.html">
@@ -283,7 +283,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="https://alejandroastudillo.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Academic">
-  <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="https://alejandroastudillo.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Ph.D. Researcher"><meta property="og:image" content="https://alejandroastudillo.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://alejandroastudillo.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
