wip - show less info

--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -16,12 +16,12 @@
   <link rel="manifest" href="/index.webmanifest">
   
   
-  <link rel="icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_2.png">
-  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png">
+  <link rel="icon" type="image/png" href="/images/icon_hud665afb12f4cc26e22130f72ce760bd4_7192_32x32_fill_lanczos_center_2.png">
+  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hud665afb12f4cc26e22130f72ce760bd4_7192_192x192_fill_lanczos_center_2.png">
 
   <link rel="canonical" href="https://alejandroastudillo.github.io/slides/example/">
 
-  <title>Slides | Academic</title>
+  <title>Slides | Alejandro Astudillo</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/reveal.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/theme/black.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/dracula.min.css" crossorigin="anonymous">
 
