--- a/publication/mixed-use-derivatives/index.html
+++ b/publication/mixed-use-derivatives/index.html
@@ -694,6 +694,14 @@
 </a>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/alejandroastudillo/urdf2modelcasadi" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
