--- a/index.html
+++ b/index.html
@@ -941,8 +941,8 @@
     
 
   <span >
-      Ajay Sathya</span>, <span >
-      Alejandro Astudillo</span>, <span >
+      Ajay Sathya</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Alejandro Astudillo</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Joris Gillis</span>, <span >
       Wilm Decré</span>, <span >
       Goele Pipeleers</span>, <span >
@@ -2330,8 +2330,8 @@
     
 
   <span >
-      Ajay Sathya</span>, <span >
-      Alejandro Astudillo</span>, <span >
+      Ajay Sathya</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Alejandro Astudillo</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Joris Gillis</span>, <span >
       Wilm Decré</span>, <span >
       Goele Pipeleers</span>, <span >
