--- a/publication/tasho/index.html
+++ b/publication/tasho/index.html
@@ -615,8 +615,8 @@
     
 
   <span >
-      Ajay Sathya</span>, <span >
-      Alejandro Astudillo</span>, <span >
+      Ajay Sathya</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Alejandro Astudillo</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Joris Gillis</span>, <span >
       Wilm Decré</span>, <span >
       Goele Pipeleers</span>, <span >
