--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS3599678&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lirias.kuleuven.be/retrieve/648392" target="_blank" rel="noopener">
   PDF
 </a>
 
