--- a/publication/index.html
+++ b/publication/index.html
@@ -1065,11 +1065,16 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://kuleuven.limo.libis.be/discovery/fulldisplay?docid=lirias3646263&amp;context=SearchWebhook&amp;vid=32KUL_KUL:Lirias&amp;search_scope=lirias_profile&amp;tab=LIRIAS&amp;adaptor=SearchWebhook&amp;lang=en" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lirias.kuleuven.be/retrieve/640748" target="_blank" rel="noopener">
   PDF
 </a>
 
 
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/parallelization-ms/cite.bib">
+  Cite
+</a>
 
 
 
@@ -1299,7 +1304,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS3599678&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lirias.kuleuven.be/retrieve/648392" target="_blank" rel="noopener">
   PDF
 </a>
 
