--- a/publication/parallelization-ms/index.html
+++ b/publication/parallelization-ms/index.html
@@ -661,6 +661,8 @@
 
 
 
+  
+
 
 
 <div class="btn-links mb-3">
@@ -680,11 +682,16 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://kuleuven.limo.libis.be/discovery/fulldisplay?docid=lirias3646263&amp;context=SearchWebhook&amp;vid=32KUL_KUL:Lirias&amp;search_scope=lirias_profile&amp;tab=LIRIAS&amp;adaptor=SearchWebhook&amp;lang=en" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://lirias.kuleuven.be/retrieve/640748" target="_blank" rel="noopener">
   PDF
 </a>
 
 
+
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/parallelization-ms/cite.bib">
+  Cite
+</a>
 
 
 
