added pdf of RAL paper

--- a/publication/symbolic-linearization-scqp/index.html
+++ b/publication/symbolic-linearization-scqp/index.html
@@ -683,7 +683,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS3670574&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://lirias.kuleuven.be/retrieve/651310" target="_blank" rel="noopener">
   PDF
 </a>
 
