--- a/index.html
+++ b/index.html
@@ -1440,6 +1440,18 @@
 <li><strong>Granting Agency:</strong> RWTH Aachen University - International Academy</li>
 </ul>
 <!-- - __Amount:__ $40,000 CAD -->
+<h3 id="__travel-grant-to-attend-the-colombian-conference-on-automatic-control-ccac-2017__"><strong>Travel Grant to Attend the Colombian Conference on Automatic Control (CCAC) 2017</strong></h3>
+<ul>
+<li><strong>Year:</strong> 2017</li>
+<li><strong>Granting Agency:</strong> Universidad del Valle</li>
+</ul>
+<!-- - __Amount:__ $40,000 CAD -->
+<h3 id="__early-career-research-grant-for-young-researchers__"><strong>Early Career Research Grant for Young Researchers</strong></h3>
+<ul>
+<li><strong>Year:</strong> 2016</li>
+<li><strong>Granting Agency:</strong> Colombian Ministry of Science &amp; Universidad del Valle</li>
+</ul>
+<!-- - __Amount:__ $40,000 CAD -->
 <!-- ### __Graduate Student Innovation Scholars__
 
 - __Year:__ 2017
