--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1016/j.ifacol.2022.10.498" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lirias.kuleuven.be/retrieve/669841" target="_blank" rel="noopener">
   PDF
 </a>
 
