--- a/publication/index.html
+++ b/publication/index.html
@@ -839,7 +839,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lirias.kuleuven.be/retrieve/669841" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.sciencedirect.com/science/article/pii/S2405896322025496/pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1301,7 +1301,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lirias.kuleuven.be/retrieve/648392" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.sciencedirect.com/science/article/pii/S240589632102200X/pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1403,7 +1403,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS3245924&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.sciencedirect.com/science/article/pii/S2405896320334455/pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
