--- a/publication/mixed-use-derivatives/index.html
+++ b/publication/mixed-use-derivatives/index.html
@@ -795,7 +795,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://lirias.kuleuven.be/retrieve/648392" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://www.sciencedirect.com/science/article/pii/S240589632102200X/pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
