--- a/publication/open-toolchain/index.html
+++ b/publication/open-toolchain/index.html
@@ -805,7 +805,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS3245924&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://www.sciencedirect.com/science/article/pii/S2405896320334455/pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
