--- a/publication/tasho-gui/index.html
+++ b/publication/tasho-gui/index.html
@@ -797,7 +797,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://lirias.kuleuven.be/retrieve/669841" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://www.sciencedirect.com/science/article/pii/S2405896322025496/pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
