--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -971,8 +971,15 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://kuleuven.limo.libis.be/discovery/fulldisplay?docid=lirias3769060&amp;context=SearchWebhook&amp;vid=32KUL_KUL:Lirias&amp;search_scope=lirias_profile&amp;tab=LIRIAS&amp;adaptor=SearchWebhook&amp;lang=en" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.sciencedirect.com/science/article/pii/S2405896322028518/pdf" target="_blank" rel="noopener">
   PDF
+</a>
+
+
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/varying-radius-tunnel/cite.bib">
+  Cite
 </a>
 
 
@@ -987,7 +994,9 @@
 
 
 
-
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1016/j.ifacol.2022.11.208" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
