--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -773,6 +773,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://youtu.be/I4Sqhr-PY6I" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1109/LRA.2022.3142396" target="_blank" rel="noopener">
