--- a/publication/tasho-gui/index.html
+++ b/publication/tasho-gui/index.html
@@ -818,6 +818,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/a5YffMyu70g" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 <a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1016/j.ifacol.2022.10.498" target="_blank" rel="noopener">
