--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
   </span>
   (2023).
   <a href="/publication/impact/">IMPACT: A Toolchain for Nonlinear Model Predictive Control Specification, Prototyping, and Deployment</a>.
-  Accepted to IFAC World Congress 2023.
+  In IFAC 2023.
   
   <p>
 
