--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -711,7 +711,7 @@
     
     <a href="/publication/impact/"  class="summary-link">
       <div class="article-style">
-        We present IMPACT, a flexible toolchain for nonlinear model predictive control (NMPC) specification with automatic code generation …
+        We present IMPACT, a flexible toolchain for nonlinear model predictive control (NMPC) specification which reduces the engineering complexity of NMPC implementations by providing the user with an easy-to-use application programming interface, and with the flexibility of using multiple state-of-the-art tools and numerical optimization solvers for rapid prototyping of NMPC solutions.
       </div>
     </a>
     
