--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/impact/cite.bib">
+  Cite
+</a>
+
 
   
   
@@ -1164,6 +1169,10 @@
 
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.48550/arXiv.2303.08850" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -1216,6 +1225,11 @@
 </a>
 
 
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/anderson-accelerated-fslp/cite.bib">
+  Cite
+</a>
 
 
 
