--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -751,6 +751,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/impact/cite.bib">
+  Cite
+</a>
+
 
   
   
@@ -770,6 +775,10 @@
 
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.48550/arXiv.2303.08850" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
@@ -858,6 +867,11 @@
 </a>
 
 
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/anderson-accelerated-fslp/cite.bib">
+  Cite
+</a>
 
 
 
