--- a/publication/anderson-accelerated-fslp/index.html
+++ b/publication/anderson-accelerated-fslp/index.html
@@ -801,6 +801,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/anderson-accelerated-fslp/cite.bib">
+  Cite
+</a>
+
 
 
 
