--- a/publication/impact/index.html
+++ b/publication/impact/index.html
@@ -795,6 +795,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/impact/cite.bib">
+  Cite
+</a>
+
 
   
   
@@ -814,6 +819,10 @@
 
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.48550/arXiv.2303.08850" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
