--- a/publication/index.html
+++ b/publication/index.html
@@ -850,6 +850,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/impact/cite.bib">
+  Cite
+</a>
+
 
   
   
@@ -869,6 +874,10 @@
 
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.48550/arXiv.2303.08850" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
@@ -942,6 +951,11 @@
 </a>
 
 
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/anderson-accelerated-fslp/cite.bib">
+  Cite
+</a>
 
 
 
