--- a/publication/index.html
+++ b/publication/index.html
@@ -845,8 +845,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.08850" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
