--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -746,8 +746,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.08850" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
