--- a/index.html
+++ b/index.html
@@ -1643,11 +1643,11 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/talk/fast-model-predictive-control-for-robotic-manipulators-efficient-computations-and-operations/" >Fast model predictive control for robotic manipulators: efficient computations and operations</a>
+      <a href="/talk/advancing-the-industrial-application-of-model-predictive-control-for-robot-manipulators-improving-computational-efficiency-and-facilitating-implementation/" >Advancing the industrial application of model predictive control for robot manipulators: Improving computational efficiency and facilitating implementation</a>
     </div>
 
     
-    <a href="/talk/fast-model-predictive-control-for-robotic-manipulators-efficient-computations-and-operations/"  class="summary-link">
+    <a href="/talk/advancing-the-industrial-application-of-model-predictive-control-for-robot-manipulators-improving-computational-efficiency-and-facilitating-implementation/"  class="summary-link">
       <div class="article-style">
         The implementation of robotic applications is currently facing various control challenges that simple controllers fail to address, …
       </div>
