--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">Ph.D. in Engineering Science - Mechanical Engineering, (ongoing)</p>
+              <p class="course">Ph.D. in Engineering Science - Mechanical Engineering, 2023</p>
               <p class="institution">KU Leuven, Belgium</p>
             </div>
           </li>
