--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 
         <h2>Alejandro Astudillo</h2>
 
-        <h3>Ph.D. Researcher</h3>
+        <h3>Postdoctoral Researcher</h3>
 
         
         <h3>
