--- a/publication/smartphone-mpc/index.html
+++ b/publication/smartphone-mpc/index.html
@@ -1003,7 +1003,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://alejandroastudillo.github.io/">Alejandro Astudillo</a></h5>
-      <h6 class="card-subtitle">Ph.D. Researcher</h6>
+      <h6 class="card-subtitle">Postdoctoral Researcher</h6>
       <p class="card-text">Passionate about robotics and outer space. Researching on real-time motion planning and fast model predictive control for robots. Other research topics include execution of control and estimation algorithms on a smartphone-based flight controller for a quadrotor.</p>
       <ul class="network-icon" aria-hidden="true">
   
