--- a/publication/flexible-beam-manipulator/index.html
+++ b/publication/flexible-beam-manipulator/index.html
@@ -819,7 +819,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.48550/arXiv.2210.00578" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1109/ICRA48891.2023.10160493" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -865,7 +865,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Accepted to ICRA 2023</div>
+          <div class="col-12 col-md-9">2023 IEEE International Conference on Robotics and Automation (ICRA)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
