--- a/publication/index.html
+++ b/publication/index.html
@@ -1255,7 +1255,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.48550/arXiv.2210.00578" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1109/ICRA48891.2023.10160493" target="_blank" rel="noopener">
   DOI
 </a>
 
