--- a/index.html
+++ b/index.html
@@ -1145,8 +1145,15 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://online-journals.org/index.php/i-joe/article/view/38781" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://online-journals.org/index.php/i-joe/article/view/38781/13441" target="_blank" rel="noopener">
   PDF
+</a>
+
+
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/gait-monitoring/cite.bib">
+  Cite
 </a>
 
 
@@ -1161,9 +1168,7 @@
 
 
 
-
-
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.3991/ijoe.v19i08.38781%20" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.3991/ijoe.v19i08.38781" target="_blank" rel="noopener">
   DOI
 </a>
 
