--- a/publication/gait-monitoring/index.html
+++ b/publication/gait-monitoring/index.html
@@ -795,8 +795,15 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://online-journals.org/index.php/i-joe/article/view/38781" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://online-journals.org/index.php/i-joe/article/view/38781/13441" target="_blank" rel="noopener">
   PDF
+</a>
+
+
+
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/gait-monitoring/cite.bib">
+  Cite
 </a>
 
 
@@ -811,9 +818,7 @@
 
 
 
-
-
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.3991/ijoe.v19i08.38781%20" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.3991/ijoe.v19i08.38781" target="_blank" rel="noopener">
   DOI
 </a>
 
