--- a/publication/index.html
+++ b/publication/index.html
@@ -860,8 +860,15 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://online-journals.org/index.php/i-joe/article/view/38781" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://online-journals.org/index.php/i-joe/article/view/38781/13441" target="_blank" rel="noopener">
   PDF
+</a>
+
+
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/gait-monitoring/cite.bib">
+  Cite
 </a>
 
 
@@ -876,9 +883,7 @@
 
 
 
-
-
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.3991/ijoe.v19i08.38781%20" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.3991/ijoe.v19i08.38781" target="_blank" rel="noopener">
   DOI
 </a>
 
